<resources>
    <string name="app_name">SmsSenderService</string>
    <string name="firebase_custom_token">eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJmaXJlYmFzZS1hZG1pbnNkay1mYnN2Y0BzbXMtc2VuZGVyLWFwcC1iMWY5NC5pYW0uZ3NlcnZpY2VhY2NvdW50LmNvbSIsInN1YiI6ImZpcmViYXNlLWFkbWluc2RrLWZic3ZjQHNtcy1zZW5kZXItYXBwLWIxZjk0LmlhbS5nc2VydmljZWFjY291bnQuY29tIiwiYXVkIjoiaHR0cHM6Ly9pZGVudGl0eXRvb2xraXQuZ29vZ2xlYXBpcy5jb20vZ29vZ2xlLmlkZW50aXR5LnYxLklkZW50aXR5VG9vbGtpdCIsImlhdCI6MTY3ODg4NjQwMCwiZXhwIjoxNjc4ODkwMDAwLCJ1aWQiOiJzbXNzZXJ2ZXIifQ.Gex5MSPMtCFvJ6UuYECF_1SrfPLT7AkIsAK3O2vpuudGWJfB4UuLVQ2kD2psMvq7zp-VrQkx8nmAeZXmtOviJfSRPjpXBO1aY43Xn-eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJmaXJlYmFzZS1hZG1pbnNkay1mYnN2Y0BzbXMtc2VuZGVyLWFwcC1iMWY5NC5pYW0uZ3NlcnZpY2VhY2NvdW50LmNvbSIsInN1YiI6ImZpcmViYXNlLWFkbWluc2RrLWZic3ZjQHNtcy1zZW5kZXItYXBwLWIxZjk0LmlhbS5nc2VydmljZWFjY291bnQuY29tIiwiYXVkIjoiaHR0cHM6Ly9pZGVudGl0eXRvb2xraXQuZ29vZ2xlYXBpcy5jb20vZ29vZ2xlLmlkZW50aXR5LnYxLklkZW50aXR5VG9vbGtpdCIsImlhdCI6MTc2MjI0OTU2MiwiZXhwIjoxNzYyMjQ5NTYyLCJ1aWQiOiJzbXNzZXJ2ZXIifQ.WCgdFZIgwBjSeaus7Xd1YZOgZZBfXRvppkS2dDz8yQOuMEBhTGeyEVJCsNCVkdwj8t-r5xAJEqde4bUljGwo2-MRQi3XdOxZnezU237oRPBgaW3M9L0kRgi4UYqYw7r5aS_Ay8XjdJZrc63L7KNYpSvbqKY3YcAfOyLMwPlJu3pPI79tIZGIqkviyjSxvudvslmE3P2xGxeuX6E80CLEZp168Gph5qaEvRAm22hSFqxHnG10JltpxO3jZg2DSwmqBywOYtl_qRXtnN0qNpdY4qmDD3sPc6NPSHyDgXYIs3oemqhwlC_wzHXj1b9wHWpqc1cu5ZspMRNieUE3b9Ffww</string>
    <string name="auth_error_message">Błąd autoryzacji z Firebase. Sprawdź konfigurację tokenu.</string>
    <string name="permissions_granted_message">Wszystkie wymagane uprawnienia zostały nadane. Usługa działa w tle.</string>
    <string name="permissions_missing_message">Aby rozpocząć wysyłkę SMS, nadaj wymagane uprawnienia.</string>
    <string name="grant_permissions_button">Nadaj uprawnienia</string>
    <string name="recent_shipments_header">Ostatnie wysyłki</string>
    <string name="message_preview_title">Podgląd wiadomości</string>
    <string name="message_preview_placeholder">Wybierz numer z listy, aby zobaczyć wysłaną treść.</string>
    <string name="message_preview_for_number">Wiadomość do %1$s</string>
    <string name="empty_shipments_placeholder">Brak zarejestrowanych wysyłek. Wyślij pierwszą wiadomość, aby zobaczyć historię.</string>
    <string name="status_pending_label">Wysyłanie…</string>
    <string name="status_sent_label">Wysłano</string>
    <string name="status_error_label">Błąd wysyłki</string>
    <string name="unknown_number_placeholder">(brak numeru)</string>
    <string name="manual_permission_guidance">Niektóre uprawnienia zostały trwale odrzucone. Musisz je nadać ręcznie w ustawieniach aplikacji.</string>
    <string name="open_app_settings_button">Otwórz ustawienia aplikacji</string>
</resources>
